<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#f2f2f2"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f2f2f2"
        android:weightSum="1" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_content_logo"
            android:src="@drawable/logo" >
        </ImageView>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="0dip"
            android:orientation="vertical"
            android:weightSum="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tuid" >
            </TextView>

            <EditText
                android:id="@+id/login_usrname"
                style="@style/LoginBoxes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:inputType="text">

                <requestFocus >
                </requestFocus>
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pw" >
            </TextView>

            <EditText
                android:id="@+id/login_pw"
                style="@style/LoginBoxes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" 
                android:imeOptions="actionDone" >        </EditText>

            <CheckBox
                android:id="@+id/checkBox1"
                style="@style/LoginBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_stay_logged" >
            </CheckBox>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="onClickSendLogin"
                android:text="@string/login_send" >
            </Button>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopToImprint"
                android:id="@+id/hintForPrivateproject"
                android:gravity="center"
                /></LinearLayout>
        
        
    </LinearLayout>
 
</ScrollView>
